Move into TimesTable.elm

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <script type="text/javascript">
 	var div = document.getElementById('elm-times-tables');
-	var tt = Elm.embed(Elm.Main, div);
+	var tt = Elm.embed(Elm.TimesTable, div);
 
 	// May need to make a proper main function, and foldp such that there
 	// is an output : Signal String to read from a port here
