--- a/index.html
+++ b/index.html
@@ -21,14 +21,35 @@
 
 <script type="text/javascript">
 	var div = document.getElementById('elm-times-tables');
-	var tt = Elm.embed(Elm.TimesTable, div);
+	var tt = Elm.embed(Elm.TimesTable, div, { reset:[] });
 
 	// May need to make a proper main function, and foldp such that there
 	// is an output : Signal String to read from a port here
   var sayNow = document.getElementById('say-now');
+
+  tt.ports.baseValue.subscribe(function(base) {
+    window.speechSynthesis.cancel();
+  });
+
   tt.ports.smud.subscribe(function(msg) {
     console.log(msg);
     sayNow.innerHTML = msg;
+
+    var utt = new SpeechSynthesisUtterance(msg);
+    var voices = window.speechSynthesis.getVoices();
+
+    //voices.forEach(function(voice) {
+    //  console.log(voice.name, voice.default ? '(default)' : '');
+    //});
+
+    utt.voice = voices[1];
+
+    utt.onend = function(event) {
+      console.log('Finished in ' + event.elapsedTime + ' seconds.');
+      tt.ports.reset.send([]);
+    }
+
+    window.speechSynthesis.speak(utt);
   });
 </script>
 </html>
