--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
   tt.ports.baseValue.subscribe(function(base) {
     window.speechSynthesis.cancel();
+    tt.ports.reset.send([]);
   });
 
   tt.ports.smud.subscribe(function(msg) {
